# Letterboxd-Capstone

./: README.md  pyproject.toml  requirements.txt
app/: Movie_Info.py
app/pages/: 1_Rating_Trends.py  2_Most_Differently_Rated_Movies.py  3_User_Data.py
data/raw/: unclean_movies.csv
notebooks/: transform_aggregated_user_ratings.ipynb  transform_merge.ipynb  transform_merged_to_aggregated.ipynb  transform_merged_to_enriched.ipynb  transform_movies.ipynb  transform_movies_with_ratings.ipynb  transform_user_ratings.ipynb
scripts/: run_etl.py
src/extract/: extract.py  extract_movies.py  extract_movies_with_ratings.py  extract_user_ratings.py
src/load/: load.py  load_aggregated_user_ratings.py  load_df_to_db.py  load_movies.py  load_user_ratings.py
src/transform/: aggregate_user_ratings.py  clean_movies.py  clean_movies_with_ratings.py  clean_user_ratings.py  enrich_merged_with_user_ratings.py  merge_movies_movies_with_ratings.py  transform.py
src/utils/: db_utils.py  file_utils.py  logging_utils.py
tests/: conftest.py  run_tests.py
tests/test_data/: expected_aggregated_clean_results.csv  expected_aggregated_user_ratings_results.csv  expected_merged_clean_results.csv  expected_merged_enriched_results.csv  expected_movies_clean_results.csv  expected_movies_with_ratings_clean_results.csv  expected_user_rating_aggregated_clean_results.csv
tests/unit_tests/: test_clean_movies.py  test_clean_movies_with_ratings.py  test_clean_user_ratings.py  test_db_utils.py  test_extract_movies.py  test_extract_movies_with_ratings.py  test_extract_user_ratings.py  (+2 more)
